Add cairo marshaling support for non-introspected signals

Add link dependency of cairo-gobject to _gi_cairo_la needed for retrieving
the GTypes of cairo classes.
Add GValue marshalers for cairo Context, Surface, FontFace, ScaledFont,
and Pattern classes.

https://bugzilla.gnome.org/show_bug.cgi?id=694604