gi/pygtype.c
@@ -28,6 +28,7 @@
 #include "pygparamspec.h"
 #include "pygtype.h"
 
+#include "pygi-type.h"
 #include "pygi-value.h"
 
 /* -------------- __gtype__ objects ---------------------------- */
@@ -621,6 +622,7 @@ pyg_type_lookup(GType type)
 
     /* recursively lookup types */
     while (ptype) {
+        pygi_type_import_by_g_type (ptype);
 	if ((tm = g_type_get_qdata(ptype, pyg_type_marshal_key)) != NULL)
 	    break;
 	ptype = g_type_parent(ptype);
